Drop `.toList()`, restore old mutable instances to fix serialization